--- a/local.settings.json
+++ b/local.settings.json
@@ -2,6 +2,11 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "",
-    "FUNCTIONS_WORKER_RUNTIME": "node"
+    "FUNCTIONS_WORKER_RUNTIME": "node",
+    "PG_HOST": "dht-dev.postgres.database.azure.com",
+    "PG_USER": "dht",
+    "PG_PASSWORD": "jtAMkp^h7NE!nJqD",
+    "PG_PORT": "5432",
+    "PG_DATABASE": "postgres"
   }
 }
