--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "joi": "^17.6.2",
     "pg": "^8.8.0"
   },
   "devDependencies": {
