--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^2.1.1",
+    "lodash": "^4.17.21",
     "n": "^9.0.0",
     "pg": "^8.8.0"
   },
