--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pg": "^8.8.0"
   },
   "devDependencies": {
