--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@anzp/azure-function-multipart": "^3.1.0",
+    "@azure/storage-blob": "^12.12.0",
     "@sendgrid/mail": "^7.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
