--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@anzp/azure-function-multipart": "^3.1.0",
+    "@azure/storage-blob": "^12.12.0",
     "@sendgrid/mail": "^7.7.0",
+    "form-data": "^4.0.0",
     "lodash": "^4.17.21",
+    "parse-multipart": "^1.0.4",
     "pg": "^8.8.0"
   },
   "devDependencies": {
