--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@anzp/azure-function-multipart": "^3.1.0",
+    "@azure/communication-email": "^1.0.0-beta.1",
     "@azure/storage-blob": "^12.12.0",
     "@sendgrid/mail": "^7.7.0",
     "form-data": "^4.0.0",
