--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/communication-email": "^1.0.0-beta.1",
     "@azure/storage-blob": "^12.12.0",
     "@sendgrid/mail": "^7.7.0",
+    "firebase-admin": "^11.5.0",
     "form-data": "^4.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
