Edit applicant , Employee onboarding Status bar steps name changed , country code added

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,12 @@
 			"command": "npm prune --production",
 			"dependsOn": "npm build (functions)",
 			"problemMatcher": []
+		},
+		{
+			"type": "func",
+			"command": "extensions install",
+			"problemMatcher": [],
+			"label": "func: extensions install"
 		}
 	]
 }
